# swagger.json
@@ -1235,6 +1235,70 @@
         }
       }
     },
+    "/orders/{id}/ship": {
+      "put": {
+        "summary": "Update Order to Shipped (Input Resi)",
+        "tags": [
+          "Order"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "tracking_number"
+                ],
+                "properties": {
+                  "tracking_number": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Order shipped"
+          }
+        }
+      }
+    },
+    "/orders/{id}/complete": {
+      "put": {
+        "summary": "Complete Order (Pesanan Diterima)",
+        "tags": [
+          "Order"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Order delivered"
+          }
+        }
+      }
+    },
     "/products": {
       "post": {
         "summary": "Create New Product",
